Added inclusion for docker

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: CI - SecuLog Tests
+name: CI - SecuLog Docker Tests
 
 on:
   push:
@@ -10,56 +10,29 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:14
-        env:
-          POSTGRES_USER: seculog
-          POSTGRES_PASSWORD: seculog
-          POSTGRES_DB: seculog_db
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
-    env:
-      DATABASE_URL: postgresql://seculog:seculog@localhost:5432/seculog_db
-      PYTHONPATH: .
-
     steps:
-      - name: Checkout repo
+      - name: 📥 Checkout repo
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
+      - name: 🐳 Set up Docker Buildx (optional but good for cache)
+        uses: docker/setup-buildx-action@v3
 
-      - name: Set up poetry cache (if you're using poetry - optional)
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+      - name: 🧼 Remove old orphan containers
+        run: docker compose down --remove-orphans || true
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      - name: 🐳 Start containers
+        run: docker compose up -d --build
 
-      - name: Wait for DB to be ready
+      - name: 🕒 Wait for Postgres to be ready
         run: |
           for i in {1..10}; do
-            pg_isready -h localhost -p 5432 && break
-            echo "Waiting for PostgreSQL..."
+            docker exec seculog-db-1 pg_isready -U seculog && break
+            echo "Waiting for DB to be ready..."
             sleep 3
           done
 
-      - name: Run tests
-        run: |
-          pytest -vv --tb=short
+      - name: ✅ Run tests inside test container
+        run: docker compose run --rm test
+
+      - name: 🧹 Shut down containers
+        run: docker compose down --remove-orphans
