--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,21 @@
-version: "3.9"
-
 services:
   web:
-    container_name: seculog-web
     build:
       context: .
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    container_name: seculog-web
     ports:
       - "8000:8000"
-    depends_on:
-      - db
-    env_file:
-      - .env
     environment:
       - DATABASE_URL=postgresql://seculog:seculog@db/seculog_db
-      - PYTHONPATH=/app
+    depends_on:
+      - db
+    volumes:
+      - .:/code
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 
   db:
-    container_name: seculog-db-1
     image: postgres:14
-    restart: always
+    container_name: seculog-db
     ports:
       - "5432:5432"
     environment:
@@ -27,22 +23,20 @@ services:
       POSTGRES_PASSWORD: seculog
       POSTGRES_DB: seculog_db
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
 
   test:
     build:
       context: .
-    working_dir: /app
-    command: pytest
-    depends_on:
-      - db
-    env_file:
-      - .env
+    container_name: seculog-test
     environment:
       - DATABASE_URL=postgresql://seculog:seculog@db/seculog_db
-      - PYTHONPATH=/app
+      - PYTHONPATH=/code
     volumes:
-      - .:/app
+      - .:/code
+    depends_on:
+      - db
+    command: pytest --tb=short -vv
 
 volumes:
-  postgres_data:
+  pgdata:
