--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,53 +10,32 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:14
-        env:
-          POSTGRES_USER: seculog
-          POSTGRES_PASSWORD: seculog
-          POSTGRES_DB: seculog_db
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd="pg_isready -U seculog"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-
     steps:
       - name: 📥 Checkout repo
         uses: actions/checkout@v4
 
+      - name: ⚙️ Set PYTHONPATH
+        run: echo "PYTHONPATH=$PWD" >> $GITHUB_ENV
+
       - name: 🐳 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: 🔧 Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
+      - name: 🧼 Remove old orphan containers
+        run: docker compose down --remove-orphans || true
 
-      - name: 🔍 Install test dependencies
+      - name: 🐳 Start containers
+        run: docker compose up -d --build
+
+      - name: 🕒 Wait for Postgres to be ready
         run: |
-          pip install -r requirements.txt
-          pip install pytest pytest-asyncio httpx
-
-      - name: ⚙️ Run tests inside Docker Compose
-        run: |
-          docker compose down --remove-orphans || true
-          docker compose up -d --build
-
-          # Wait for DB to become healthy
-          echo "⏳ Waiting for database..."
           for i in {1..10}; do
-            docker exec seculog-db-1 pg_isready -U seculog && break
+            docker exec seculog-db pg_isready -U seculog && break
+            echo "Waiting for DB to be ready..."
             sleep 3
           done
 
-          echo "✅ Running tests..."
-          docker compose run --rm test
+      - name: ✅ Run tests inside test container
+        run: docker compose run --rm test
 
-      - name: 🧹 Clean up containers
-        if: always()
+      - name: 🧹 Shut down containers
         run: docker compose down --remove-orphans
