--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,10 @@ services:
         condition: service_healthy
     environment:
       - DATABASE_URL=postgresql://seculog:seculog@db/seculog_db
+      - PYTHONPATH=/code
     env_file:
       - .env
+    working_dir: /code
 
   db:
     image: postgres:14
@@ -23,7 +25,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
-      - "5433:5432"  # Changed from 5432:5432 to avoid host conflict
+      - "5433:5432"  # host:container
     environment:
       POSTGRES_USER: seculog
       POSTGRES_PASSWORD: seculog
@@ -41,11 +43,13 @@ services:
     command: pytest
     volumes:
       - .:/code
+    working_dir: /code
+    environment:
+      - DATABASE_URL=postgresql://seculog:seculog@db/seculog_db
+      - PYTHONPATH=/code
     depends_on:
       db:
         condition: service_healthy
-    environment:
-      - DATABASE_URL=postgresql://seculog:seculog@db/seculog_db
     env_file:
       - .env
 
